--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,11 @@ body {
   padding: 40px;
   margin-top: 20px;
   background-color: rgb(75, 29, 226);
+  background-image: url(../img/hill.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
 }
 
 .main-title {
