--- a/css/form.css
+++ b/css/form.css
@@ -3,19 +3,19 @@
   width: 100%;
   color: black;
 }
-.form-row {
+.form > .form-row {
   display: inline-block;
   width: 100%;
   margin-bottom: 30px;
 }
 
-label {
+.form > .form-row > label {
   display: inline-block;
   width: 100%;
-  font-size: 20px;
+  margin-bottom: 5px;
 }
 
-input {
+.form > .form-row > input {
   display: inline-block;
   width: 100%;
   font-size: 20px;
