--- a/css/form.css
+++ b/css/form.css
@@ -9,6 +9,10 @@
   margin-bottom: 30px;
 }
 
+.form > .form-row:last-of-type {
+  margin-bottom: 0px;
+}
+
 .form > .form-row > label {
   display: inline-block;
   width: 100%;
@@ -19,7 +23,17 @@
   display: inline-block;
   width: 100%;
   font-size: 20px;
-  border-top: none;
-  border-right: none;
-  border-left: none;
+  line-height: 20px;
+  border: none;
+  border-bottom: 2px solid rgb(206, 128, 128);
+}
+
+.form > .form-row > input:focus {
+  outline: dotted #999;
+}
+
+.form input::placeholder {
+  color: #999;
+  font-style: italic;
+  font-size: 10px;
 }
