--- a/css/form.css
+++ b/css/form.css
@@ -37,3 +37,22 @@
   font-style: italic;
   font-size: 10px;
 }
+
+.right-column span {
+  display: inline-block;
+  padding: 15px;
+  line-height: 20px;
+  margin-left: 15px;
+}
+
+.right-column a {
+  display: inline-block;
+  padding: 15px;
+  line-height: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+.right-column a:hover {
+  text-decoration: underline;
+}
