--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
   width: 800px;
   margin-top: 100px;
   margin-left: calc(50% - 400px);
+  position: relative;
 }
 
 .left-column {
@@ -23,13 +24,15 @@ body {
   width: 40%;
   float: left;
   padding: 40px;
-  margin-top: 20px;
   background-color: rgb(75, 29, 226);
   background-image: url(../img/hill.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   color: #fff;
+  position: absolute;
+  top: 30px;
+  bottom: 30px;
 }
 
 .main-title {
@@ -42,6 +45,10 @@ body {
 .bottom-links {
   display: inline-block;
   width: 100%;
+  position: absolute;
+  bottom: 20px;
+  left: 40px;
+  right: 40px;
 }
 
 .bottom-links > link {
@@ -55,7 +62,7 @@ body {
   padding: 60px;
   width: 60%;
   position: relative;
-  float: left;
+  float: right;
   background-color: #fff;
 }
 
