--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,18 @@ body * {
 
 body {
   background-color: rgb(161, 70, 161);
+  position: relative;
+  height: 100vh;
 }
 
 .container {
   display: inline-block;
   width: 800px;
-  margin-top: 100px;
-  margin-left: calc(50% - 400px);
+  position: absolute;
   position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .left-column {
