--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,28 @@ body * {
 }
 
 body {
-  background-color: rgb(161, 70, 161);
+  background: rgb(137, 149, 213);
+  background: linear-gradient(
+    352deg,
+    rgba(137, 149, 213, 1) 35%,
+    rgba(0, 138, 171, 1) 100%
+  );
   position: relative;
   height: 100vh;
+}
+
+.img-bck {
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+  filter: blur(1rem);
 }
 
 .container {
   display: inline-block;
   width: 800px;
   position: absolute;
-  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
